		- Fix typo in Dynamic Launch Zone calculation that was preventing some missiles from launching.
		- Remove global toggle to use Dynamic or Static launch range for missiles and replace it with a per-missile toggle. When toggled on, the missile will launch missiles at their max engagement range without taking into account craft velocities.
- Competition:
	- Include last-damaged-by tracking for bullet explosions that damage vessels, not just hits.
	- GM kill when weaponless now looks for no weapons with ammo instead of no weapons.

v1.6.7.0
IMPROVEMENTS / FIXES
- General:
	- Kerbal Foundries wheel and track HP now properly scales with wheel size.
	- ProcArmor now has symmetry attach.
	- Fix Armor panels < 10mm thick resetting to 25mm.
	- Toggling Battle Damage will disable Paintball Mode, if enabled.
- UI:
	- Windows that show despite the UI being disabled (i.e., Vessel Switcher and Score windows) store a separate size and location for that mode.
	- Use a resize handle instead of buttons for horizontally resizing the Vessel Switcher window.
- AI / WM:
	- When ramming, if the target is also trying to ram us, aim more directly at them (avoids unstable dynamics).
	- Fix some depth-keeping logic with Submarine AI.
	- Guard Mode toggles off if enabled when loading into a battle site from the KSC that had active combatants at the time player previously exited to Space Center.
	- Fix secondary target assignment logic assigning targets irrespective of target priority settings.
	- Add UNDERWATER_VISION view distance option so ships require sonar to detect submerged subs, and submerged subs require sonar to detect other vessels vs being able to see them as long as they are within guard range.
	- Add attack logic for gun-armed submarines when BULLET_WATER_DRAG is disabled.
	- AI now respect target priority settings when looking at landed or splashed targets.
	- Fix issue with ground vehicle AIs not selecting missiles against ground targets in some circumstances.