@@ -5252,9 +5252,11 @@ namespace BDArmory.Control
                                 {
                                     candidateTDPS += candidateDetDist; // weight selection towards misiles with proximity warheads
                                 }
-                                if (heat && heatTarget.exists && heatTarget.signalStrength < heatThresh)
+                                if (heat && heatTarget.exists && heatTarget.signalStrength *
+                                        ((BDArmorySettings.ASPECTED_IR_SEEKERS && Vector3.Dot(guardTarget.vesselTransform.up, vessel.vesselTransform.up) < 0.65f) ?
+                                        mlauncher.frontAspectHeatModifier : 1) < heatThresh)
                                 {
-                                    candidateTDPS *= 0.001f; //Heatseeker, but IR sig is below missile threshold, skip to something else unless nutohine else available
+                                    candidateTDPS *= 0.001f; //Heatseeker, but IR sig is below missile threshold, skip to something else unless nothing else available
                                 }
                                 if (radar)
                                 {
